
syntax = "proto3";

//import "google/protobuf/any.proto";
//import "google/protobuf/empty.proto";

package goisisapi;

service GoisisApi {
	rpc Enable(EnableRequest) returns (EnableResponse);
	rpc Disable(DisableRequest) returns (DisableResponse);

	rpc InterfaceEnable(InterfaceEnableRequest) returns (InterfaceEnableResponse);
	rpc InterfaceDisable(InterfaceDisableRequest) returns (InterfaceDisableResponse);

	rpc AdjacencyGet(AdjacencyGetRequest) returns (AdjacencyGetResponse);
	rpc AdjacencyMonitor(AdjacencyMonitorRequest) returns (stream AdjacencyMonitorResponse);

	rpc DbLsGet(DbLsGetRequest) returns (DbLsGetResponse);
	rpc DbLsMonitor(DbLsMonitorRequest) returns (stream DbLsMonitorResponse);
}

message EnableRequest {
}

message EnableResponse {
	string result = 1;
}

message DisableRequest {
}

message DisableResponse {
	string result = 1;
}

message InterfaceEnableRequest {
	string interface = 1;
}

message InterfaceEnableResponse {
	string result = 1;
}

message InterfaceDisableRequest {
	string interface = 1;
}

message InterfaceDisableResponse {
	string result = 1;
}

message AdjacencyGetRequest {
}

message AdjacencyGetResponse {
}

message AdjacencyMonitorRequest {
	string interface = 1;
}

message AdjacencyMonitorResponse {
        repeated Adjacency adjacency = 1;
}

message DbLsGetRequest {
}

message DbLsGetResponse {
}

message DbLsMonitorRequest {
	string level = 1;
}

message DbLsMonitorResponse {
	repeated Lsp lsp = 1;
}

//

message Adjacency {
	string interface = 1;
	string neighbor_type = 2;
	string neighbor_sysid = 3;
	uint32 neighbor_extended_circuit_id = 4;
	string neighbor_snpa = 5;
	string usage = 6;
	uint32 hold_timer = 7;
	uint32 neighbor_priority = 8;
	uint32 lastuptime = 9;
	string state = 10;
}

message Lsp {
	string level = 1;
	bool decoded_completed = 2;
	string raw_data = 3;
	string lsp_id = 4;
	uint32 checksum = 5;
	uint32 remaining_lifetime = 6;
	uint32 sequence = 7;
	uint32 attributes = 8;
	repeated string ipv4_addresses = 9;
	repeated string ipv6_addresses = 10;
	string ipv4_te_routerid = 11;
	string ipv6_te_routerid = 12;
	repeated uint32 protocol_supported = 13;
	string dynamic_hostname = 14;
	Authentication authentication = 15;
	MtEntries mt_entries = 16;
	repeated RouterCapabilities router_capabilities = 17;
	NodeTags node_tags = 18;
	bytes binary = 19;
}

message Authentication {
	string authentication_type = 1;
	string authentication_key = 2;
}

message Topology {
	uint32 mt_id = 1;
	uint32 attributes = 2;
}

message MtEntries {
	repeated Topology topology = 1;
}

message RouterCapabilities {
	uint32 flags = 1;
}

message NodeTags {
}

message Global {
	string system_id = 1;
}

